<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ac_about">About</string>
    <string name="ac_about_gwm_company">Haval Sales (Thailand) Co.,Ltd.</string>
    <string name="ac_about_haval_version">Version:</string>
    <string name="ac_account">Account</string>
    <string name="ac_account_binding">Account Binding</string>
    <string name="ac_account_create_success_email">The account has linked to the email %1$s, you can login by this email.</string>
    <string name="ac_account_created_successfully">Account created successfully</string>
    <string name="ac_account_email_code_hint">We’ll send you a code to verify your email</string>
    <string name="ac_account_has_logged_in_other_device">"Your account has been logged in on another device. If it's not your operation,  please log in and change the bound email immediately to keep the verification code safe."</string>
    <string name="ac_account_login_with_code">Login with verification code</string>
    <string name="ac_account_login_with_password">Login with password</string>
    <string name="ac_account_password">Password</string>
    <string name="ac_account_under_cancel">Account under cancellation</string>
    <string name="ac_account_under_cancel_content">You can withdraw the cancellation and continue</string>
    <string name="ac_add_subscription">Add Subscription</string>
    <string name="ac_address_book">Contacts</string>
    <string name="ac_address_book_desc">For contacting customer service and share IoV services with friends</string>
    <string name="ac_address_management">Address Management</string>
    <string name="ac_agree_user_protocol_agreement_tips">Please read and accept the App Terms of Use, the Point Program Terms and Condition of Participation and the Privacy Policy.</string>
    <string name="ac_album_permission_apply_tips">No permission to access album, please authorize in the settings</string>
    <string name="ac_alert_cancel">Cancel</string>
    <string name="ac_alert_ok">OK</string>
    <string name="ac_alert_switch">Switch</string>
    <string name="ac_allow_access">Allow Access</string>
    <string name="ac_association_success">The account has been connected</string>
    <string name="ac_atleast_one_lower">At least 1 lowercase</string>
    <string name="ac_atleast_one_number">At least 1 number</string>
    <string name="ac_atleast_one_upper">At least 1 uppercase</string>
    <string name="ac_audio">Microphone</string>
    <string name="ac_audio_desc">Provide intelligent services like Customized Function</string>
    <string name="ac_avatar_change_take_time_hint">Avatar changes may take one business day to review</string>
    <string name="ac_base_create">Create</string>
    <string name="ac_base_email">Email</string>
    <string name="ac_bind_invite_code">"Friend's Invite Code"</string>
    <string name="ac_bind_mobile">Phone Number : %1$s</string>
    <string name="ac_calendar">Calendar</string>
    <string name="ac_call_phone">Call %1$s</string>
    <string name="ac_cancellation_hint">In the process of account deleting, please re-register 5 days later</string>
    <string name="ac_cancellation_hint1">The account has been applied for deleting, please log in with email verification code first and withdraw the application</string>
    <string name="ac_card_frame">VIN</string>
    <string name="ac_check_in">Check in</string>
    <string name="ac_check_in_usercenter">Check-in</string>
    <string name="ac_checked_in">Checked in</string>
    <string name="ac_checked_in_success">Checked in successfully</string>
    <string name="ac_choose_photo_album">Open Gallery</string>
    <string name="ac_clear_memory">Clear Cache</string>
    <string name="ac_clear_memory_success_tips">Cleared successfully</string>
    <string name="ac_clear_memory_tips">Clear Cache?</string>
    <string name="ac_close_system_msg_hint">The App will not receive any new message after being turned off</string>
    <string name="ac_close_system_msg_hint1">You will not receive any %1$s after turning off the notifications. Sure to turn off?</string>
    <string name="ac_collect">My Favorites</string>
    <string name="ac_collected_trophies">Collected Badges</string>
    <string name="ac_complete_name">Complete Name</string>
    <string name="ac_confirm_title">Confirm</string>
    <string name="ac_connect_account">\"%1$s\" Wants to Use \"%2$s.com\" to Sign In</string>
    <string name="ac_connect_account_toast">This allows the app and website to share information about you.</string>
    <string name="ac_contact">If you cannot receive verification code, please contact xxx</string>
    <string name="ac_contact_us">Contact Us</string>
    <string name="ac_continue">Continue</string>
    <string name="ac_copy_success">Copied</string>
    <string name="ac_country_england">United Kingdom</string>
    <string name="ac_country_germany">Germany</string>
    <string name="ac_country_iceland">Iceland</string>
    <string name="ac_country_ireland">Ireland</string>
    <string name="ac_country_israel">Israel</string>
    <string name="ac_country_norway">Norway</string>
    <string name="ac_country_sweden">Sweden</string>
    <string name="ac_create_acount">Create Account</string>
    <string name="ac_current_country_switch">The content you are viewing is not available in your current country, please switch to %1$s in [Me-Settings-Country] and view it again</string>
    <string name="ac_daily_check_in">Daily Check-in</string>
    <string name="ac_delete_account">Delete Account</string>
    <string name="ac_delete_record_failed">Failed to delete</string>
    <string name="ac_delete_record_success">Succeeded to delete record</string>
    <string name="ac_disassociate">Disconnect</string>
    <string name="ac_disassociate_success">The account has been disconnected</string>
    <string name="ac_disconnect_account">Disconnect account</string>
    <string name="ac_disconnect_account_toast">Sure to disconnect the third party account?</string>
    <string name="ac_earning">Earned</string>
    <string name="ac_edit_subscription">Edit Subscription</string>
    <string name="ac_email">Email</string>
    <string name="ac_email_address">Email Address</string>
    <string name="ac_email_exists_hint">This account already exists</string>
    <string name="ac_email_not_exist_hint">The account does not exist, create an account now?</string>
    <string name="ac_enter_a_valid_email">Enter a valid email</string>
    <string name="ac_enter_email">Enter email</string>
    <string name="ac_enter_first_name">Enter first name</string>
    <string name="ac_enter_friends_invite_code">"Enter your friend's invite code, both of you can earn points. If you don't have an invite code, please press \"skip\"."</string>
    <string name="ac_enter_last_name">Enter last name</string>
    <string name="ac_enter_linked_email">Enter your linked email</string>
    <string name="ac_enter_phone_num">Enter phone number</string>
    <string name="ac_enter_phone_number">Enter a valid phone number</string>
    <string name="ac_enter_valid_email">Enter a valid email</string>
    <string name="ac_esure_agree_agreement">Please read and agree to the agreement</string>
    <string name="ac_failed_and_retry">The account cancellation application submission failed. Do you want to submit it again?</string>
    <string name="ac_faq">FAQ</string>
    <string name="ac_favorite_post_tip">added your post to favorites</string>
    <string name="ac_legal_title">Legal</string>
    <string name="ac_mileage_unit_set">Set Mileage Unit</string>
    <string name="ac_min_max_pass_chars">8-20 characters</string>
    <string name="ac_modify_email">Change Email</string>
    <string name="ac_modify_password">Change Password</string>
    <string name="ac_msg_setting">Message Settings</string>
    <string name="ac_multi_country">Country</string>
    <string name="ac_multi_language">Language</string>
    <string name="ac_reset_password">Reset Password</string>
    <string name="ac_setting_logout">Log Out</string>
    <string name="ac_system_permission">System Permissions</string>
    <string name="ac_third_login">Third Party Log In</string>
    <string name="agree">Allow</string>
    <string name="app_focus_on_protecting_privacy">GWM ORA cares about your data security and privacy protection.</string>
    <string name="base_cancel">Cancel</string>
    <string name="base_no_more_notice">No more reminders</string>
    <string name="base_ok">OK</string>
    <string name="base_open_with_third_app_tip">No application can open this file have been detected. You can install the APP which supports this file and try again, or try to open it in that APP</string>
    <string name="base_open_with_third_app_tip_title">Unable to open now</string>
    <string name="base_promote">Notice</string>
    <string name="base_sure">Confirm</string>
    <string name="picture_cancel">ไม่อนุญาต</string>
    <string name="picture_photograph">ถ่ายภาพ</string>
    <string name="picture_record_video">บันทึกวีดีโอ</string>
    <string name="privacy_tips1">1. We describe how we collect, use, store, share and transfer this information in the “App Terms of Use”, “Point Program Terms and Condition of Participation” and “Privacy Policy”. This information includes but is not limited to: The scope of the information we collect and the purpose of use; How we protect the personal information of users; Your rights to your personal information, etc.</string>
    <string name="privacy_tips2">2. Continue means you understand and accept the App Terms of Use, the Point Program Terms and Condition of Participation and the Privacy Policy.</string>
    <string name="un_agree">Deny</string>
    <string name="ve_add">Add</string>
    <string name="ve_kh_left">(</string>
    <string name="ve_kh_right">/3)</string>
    <string name="ve_mileage_km_unit">km</string>
    <string name="ve_pre_cool_close_tips">If A/C is on, you can turn it off via remote control</string>
    <string name="ve_security_password_title">PIN Settings</string>
    <string name="view_full_version">View the version</string>
    <string name="welcome_app_name">Welcome to GWM ORA</string>
</resources>