<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/ac_activity_setting_0" android:background="@color/ac_color_f9f9f9" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.beans.widget.FreeCardLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" app:fcl_blurRadiusBottom="16.0dip" app:fcl_shadowRadius="15.0dip" app:fcl_yOffset="10.0dip" style="@style/free_card_layout">
                <com.beans.widget.GeneralLabel android:id="@id/gl_system_notice" android:tag="binding_1" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_msg_setting" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_system_permission" android:tag="binding_2" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_system_permission" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_third_party_login" android:tag="binding_3" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_third_login" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_receive_promotion_info" android:tag="binding_4" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_legal_title" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_address_management" android:tag="binding_5" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_address_management" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
            </com.beans.widget.FreeCardLayout>
            <com.beans.widget.FreeCardLayout android:orientation="vertical" android:id="@id/fcl_email" android:layout_width="fill_parent" android:layout_height="wrap_content" app:fcl_blurRadiusBottom="16.0dip" app:fcl_blurRadiusTop="0.0dip" app:fcl_shadowRadius="15.0dip" app:fcl_yOffset="10.0dip" style="@style/free_card_layout">
                <com.beans.widget.GeneralLabel android:id="@id/gl_change_email" android:tag="binding_6" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_modify_email" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" app:valueTextColor="@color/color_999999" app:valueTextSize="@dimen/dimen_common_text_size_14" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_modify_password" android:tag="binding_7" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_modify_password" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_pin" android:tag="binding_8" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ve_security_password_title" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_delete_account" android:tag="binding_9" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_delete_account" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" style="@style/ac_setting_general_label" />
            </com.beans.widget.FreeCardLayout>
            <com.beans.widget.FreeCardLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" app:fcl_blurRadiusTop="0.0dip" app:fcl_shadowRadius="15.0dip" app:fcl_yOffset="10.0dip" style="@style/free_card_layout">
                <com.beans.widget.GeneralLabel android:id="@id/gl_change_mileageUnit" android:tag="binding_10" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_mileage_unit_set" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" app:valueText="@string/ve_mileage_km_unit" app:valueTextColor="@color/color_999999" app:valueTextSize="@dimen/dimen_common_text_size_14" app:valueTextVisible="visible" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_change_country" android:tag="binding_11" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_multi_country" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" app:valueText="@string/ac_country_germany" app:valueTextColor="@color/color_999999" app:valueTextSize="@dimen/dimen_common_text_size_14" app:valueTextVisible="visible" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_change_language" android:tag="binding_12" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_multi_language" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" app:valueText="泰语" app:valueTextColor="@color/color_999999" app:valueTextSize="@dimen/dimen_common_text_size_14" app:valueTextVisible="visible" style="@style/ac_setting_general_label" />
                <com.beans.widget.GeneralLabel android:id="@id/gl_clear_cache" android:tag="binding_13" app:ivImageSrc="@drawable/base_more_info" app:labelText="@string/ac_clear_memory" app:labelTextColor="@color/color_2F2F2F" app:labelTextSize="@dimen/dimen_common_text_size_16" app:valueTextColor="@color/color_999999" app:valueTextSize="@dimen/dimen_common_text_size_14" app:valueTextVisible="visible" style="@style/ac_setting_general_label" />
            </com.beans.widget.FreeCardLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton android:id="@id/btn_logout" android:tag="binding_14" android:layout_marginLeft="@dimen/dimen_common_20" android:layout_marginTop="@dimen/dimen_common_10" android:layout_marginRight="@dimen/dimen_common_20" android:layout_marginBottom="@dimen/dimen_common_50" android:text="@string/ac_setting_logout" style="@style/ac_button" />
</LinearLayout>