<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/base_bg_shape_favorite" android:paddingLeft="@dimen/dimen_common_15" android:paddingTop="@dimen/dimen_common_24" android:paddingRight="@dimen/dimen_common_15" android:paddingBottom="@dimen/dimen_common_24" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.beans.base.widget.BoldTextView android:textSize="@dimen/dimen_common_text_size_22" android:textColor="@color/color_2F2F2F" android:gravity="center_horizontal" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_app_name" />
    <com.beans.base.widget.MaxHeightScrollView android:paddingTop="@dimen/dimen_common_20" android:layout_width="fill_parent" android:layout_height="wrap_content" app:maxHeight="@dimen/dimen_common_300">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/dimen_common_text_size_14" android:textColor="@color/color_333335" android:id="@id/tv_protocol" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_focus_on_protecting_privacy" />
            <TextView android:textSize="@dimen/dimen_common_text_size_14" android:textColor="@color/color_ff686868" android:id="@id/tv_protocol1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_12" android:text="@string/privacy_tips1" />
            <TextView android:textSize="@dimen/dimen_common_text_size_14" android:textColor="@color/color_ff686868" android:id="@id/tv_protocol2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_4" android:text="@string/privacy_tips2" />
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/dimen_common_text_size_12" android:textColor="@color/color_ff656566" android:id="@id/tv_view_full" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_10" android:text="@string/view_full_version" />
        </LinearLayout>
    </com.beans.base.widget.MaxHeightScrollView>
    <TextView android:gravity="center" android:id="@id/btn_agree" android:layout_height="@dimen/dimen_common_35" android:layout_marginTop="@dimen/dimen_common_20" android:text="@string/agree" android:layout_marginStart="@dimen/dimen_common_13" android:layout_marginEnd="@dimen/dimen_common_13" style="@style/ac_button" />
    <TextView android:textColor="#ff13b0b9" android:gravity="center" android:id="@id/btn_disagree" android:background="@drawable/ac_selector_button_hollow" android:layout_height="@dimen/dimen_common_35" android:layout_marginTop="@dimen/dimen_common_12" android:text="@string/un_agree" android:layout_marginStart="@dimen/dimen_common_13" android:layout_marginEnd="@dimen/dimen_common_13" style="@style/ac_button" />
</LinearLayout>