<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/ve_title_text_color_dark" android:gravity="center" android:id="@id/title_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_24" android:minHeight="@dimen/dimen_common_27" android:text="@string/base_promote" android:layout_marginStart="@dimen/dimen_common_20" android:layout_marginEnd="@dimen/dimen_common_20" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/ve_title_text_color_dark" android:gravity="center" android:id="@id/desc_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_6" android:minHeight="@dimen/dimen_common_27" android:text="@string/ve_pre_cool_close_tips" android:layout_marginStart="@dimen/dimen_common_20" android:layout_marginEnd="@dimen/dimen_common_20" />
    <androidx.appcompat.widget.AppCompatCheckBox android:id="@id/prompt_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_16" android:button="@drawable/ve_refresh_selected" android:text="@string/base_no_more_notice" android:paddingStart="@dimen/dimen_common_12" />
    <View android:background="@color/ve_divider_line_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="24.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_common_48">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/ve_title_text_color_dark" android:gravity="center" android:id="@id/btnCancel" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="@dimen/dimen_common_48" android:text="@string/base_cancel" android:layout_weight="1.0" />
        <View android:id="@id/bottom_line" android:background="@color/ve_divider_line_color" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/ve_title_text_size" android:textColor="@color/ve_title_text_color_dark" android:gravity="center" android:id="@id/btnOk" android:layout_width="0.0dip" android:layout_height="@dimen/dimen_common_48" android:text="@string/base_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>