<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/ac_activity_reset_password_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:mobile="http://www.bangcle.mobile">
    <ScrollView android:id="@id/scroll_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="10.0dip" android:fillViewport="true" app:layout_constraintBottom_toTopOf="@id/btn_complete" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="32.0sp" android:textColor="@color/color_2F2F2F" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_20" android:text="@string/ac_reset_password" android:layout_marginStart="@dimen/dimen_common_20" android:layout_marginEnd="@dimen/dimen_common_20" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.beans.widget.edit.material.MaterialPwdEditText android:textSize="@dimen/dimen_common_text_size_18" android:textColor="@color/color_2F2F2F" android:textColorHint="#ffbdbdbd" android:id="@id/et_inputView" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="178.0dip" android:hint="@string/ac_account_password" android:textCursorDrawable="@drawable/base_text_cursor_shape" android:fontFamily="@font/kanit_regular" app:layout_constraintEnd_toEndOf="@id/tv_title" app:layout_constraintStart_toStartOf="@id/tv_title" app:layout_constraintTop_toBottomOf="@id/tv_title" app:met_errorColor="#fffa4a5e" app:met_floatingLabel="highlight" app:met_floatingLabelPadding="@dimen/dimen_common_20" app:met_floatingLabelText="@string/ac_account_password" app:met_floatingLabelTextColor="@color/ac_color_13b0b9" app:met_floatingLabelTextSize="@dimen/dimen_common_text_size_18" app:met_primaryColor="@color/ac_color_13b0b9" app:met_pwd_normal="@mipmap/ac_input_icon_key_visible" app:met_pwd_visible="@mipmap/ac_input_icon_key_invisible" app:met_underlineColor="@color/color_FF1C1F2A" app:met_underlineSize="0.5dip" mobile:keyboardType="0" mobile:maxlen="20" mobile:style="2" mobile:textAutoClean="false" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_common_7" app:layout_constraintStart_toStartOf="@id/et_inputView" app:layout_constraintTop_toBottomOf="@id/et_inputView">
                <TextView android:textSize="12.0sp" android:textColor="#ff686868" android:id="@id/input_rules_characters" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ac_min_max_pass_chars" />
                <TextView android:textSize="12.0sp" android:textColor="#ff686868" android:id="@id/input_rules_uppercase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ac_atleast_one_upper" />
                <TextView android:textSize="12.0sp" android:textColor="#ff686868" android:id="@id/input_rules_lowercase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ac_atleast_one_lower" />
                <TextView android:textSize="12.0sp" android:textColor="#ff686868" android:id="@id/input_rules_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ac_atleast_one_number" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:textSize="@dimen/dimen_common_text_size_18" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_complete" android:tag="binding_1" android:background="@drawable/ac_selector_login_button_bg" android:paddingTop="@dimen/dimen_common_12" android:paddingBottom="@dimen/dimen_common_12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_common_20" android:text="@string/ac_continue" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>